# projectwe-intelligence

./: Dockerfile  pyproject.toml  tox.ini
.github/workflows/: ci-cd.yml
app/: main.py
